--- a/Main.tex
+++ b/Main.tex
@@ -235,7 +235,13 @@
 \newcommand{\resrule}[1]{\mathbf{#1}}
 \newcommand{\Res}{\resrule{Res}}
 \newcommand{\Sub}{\resrule{Sub}}
-
+\newcommand{\consistent}[1]{\mathrm{cons}(#1)}
+\newcommand{\consvals}{\mathrm{Cons}}
+\newcommand{\mynote}[1]{{{\textbf{#1}}}}
+\newcommand{\Nat}{{\mathbb N}}
+\newcommand{\Real}{{\mathbb R}}
+\newcommand{\compatible}[2]{\mathrm{compatible}(#1,#2)}
+\newcommand{\incompatible}[2]{\mathrm{incompatible}(#1,#2)}
 \newcommand{\modres}[1]{\overset{#1}{\underset{\text{\tiny Res}}{\vdash}}}
 \newcommand{\moddpll}[1]{\overset{#1}{\underset{\text{\tiny DPLL}}{\vdash}}}
 
