--- a/lit.bib
+++ b/lit.bib
@@ -590,6 +590,19 @@
   publisher = {Elsevier}
 }
 
+@ARTICLE{EE86,
+  author = {Emerson, E. A. and Halpern, J. Y.},
+  title = {"Sometimes" and "not never" revisited: on branching versus linear
+	time temporal logic},
+  journal = {Journal of the ACM},
+  year = {1986},
+  volume = {33},
+  pages = {151--178},
+  number = {1},
+  owner = {andylawrence},
+  timestamp = {2014.04.25}
+}
+
 @INPROCEEDINGS{MF11,
   author = {Fadlisyah, M. and {\"O}lveczky, P. C. and {\'A}brah{\'a}m, E.},
   title = {Object-Oriented Formal Modeling and Analysis of Interacting Hybrid
