--- a/BackgroundSAT.tex
+++ b/BackgroundSAT.tex
@@ -93,17 +93,33 @@ $$\Gamma \models \Delta$$
 \end{mydef}
 This is an NP complete problem, meaning that it is solveable by a non-deterministic turing machine in polynomial time. Such problem are solved by a back tracking search for a potential solution, first an  assignment the variables is tried, if that fails then the algorithm un does some assignments and tries another solution until all potential solutions have been tried. If all potential solutions do not satisfy the problem then it is said to be unsatisfiable i.e. it has no solution.
 \section{The DPLL Algorithm}
-The DPLL algorithm attempts to solve the satisfiability problem by performing a search of problem space. The algorithm consists of a split operation which causes a branching over a literal the resulting problems in the two sub trees are then simplified using a set of rules before a further branching is applied.
+The DPLL algorithm attempts to solve the satisfiability problem by performing a search of problem space. The algorithm consists of a split operation which causes a branching over a literal the resulting problems in the two sub trees are then simplified using a set of rules before a further branching is applied. Consider the following pigeon hole formulae $\mathrm{PHP}(2,1)$ that attempts to put two pigeons into one hole. It is unsatisfiable and therefore the search algorithm branches over the entire space for a result before finally proving that the formula is unsatisfiable.
+
+$$PHP(2,1) := \{\neg X_1, \neg X_2\}, \{ X_1 \}, \{ X_2 \} $$
+
+
 \bigskip
 \begin{figure}[h!]
 \begin{center}
 \begin{tikzpicture}
 \tikzstyle{arrow}=[->, thick]
-\draw[arrow] (0,0) -- node [above = 10pt, left = 1pt] {$+x_1$} (-1,-1);
+\draw node (A)  at (0,0) {$X_1$};
+\draw node (B1) at (-1.2,-1.2) {$X_2$};
+\draw node (B2) at (1.2,-1.2) {$X_2$};
+\draw[arrow] (A) -- node [above = 5pt, left] {$t$} (-1,-1);
+\draw[arrow] (A) -- node [above = 5pt, right] {$f$} (1,-1);
+\draw node (C1) at (-2.4, -2.4) {$\bot$};
+\draw node (C2) at (0, -2.4) {$\bot$};
+\draw node (C3) at (2.4, -2.4) {$\bot$};
+\draw[arrow] (B1) -- node [above = 5pt, left] {$t$} (C1);
+\draw[arrow] (B1) -- node [above = 5pt, right] {$f$} (C2);
+\draw[arrow] (B2) -- node [above = 5pt, left] {$t$} (C2);
+\draw[arrow] (B2) -- node [above = 5pt, right] {$f$} (C3);
+
 
 \end{tikzpicture}
 \end{center}
-\caption{The branching search of the DPLL algorithme}
+\caption{The branching search of the DPLL algorithm}
 \end{figure}
 \bigskip
 
